# LatticeMonteCarlo

./: .clang-format  .gitignore  CMakeLists.txt  LKMC_Gtest.cpp  LKMC_Main.cpp  README.md  build.sh
.github/workflows/: cmake.yml
cmake/: FindARMADILLO.cmake  FindEIGEN3.cmake  FindEigen3.cmake  FindTensorFlow.cmake
deprecated/: Atom.hpp  CanonicalMc.cpp  CanonicalMc.h  CanonicalMcNearStepT.cpp  CanonicalMcNearStepT.h  ChainKmcOmp.cpp  ChainKmcOmp.h  ClusterExpansionPredictorMM2.cpp  ElementBond.hpp  EnergyPredictorE0DESymmetry.cpp  EnergyPredictorE0DESymmetry.h  EnergyPredictorQuartic.cpp  EnergyPredictorQuartic.h  EnergyPredictorStateLru.cpp  EnergyPredictorSymmetry.h  KineticMcChainOmp.h  KmcEvent.h  SemiGrandCanonicalMcStepT.cpp  SemiGrandCanonicalMcStepT.h  VectorMatrix.hpp
lkmc/ansys/include/: CanonicalMC.h  CanonicalMc.h  CanonicalMc1.h  CanonicalMcStepT.h  Cluster.h  ClustersFinder.h  Iterator.h  ShortRangeOrder.h  SimulatedAnnealing.h
lkmc/ansys/src/: CanonicalMC.cpp  CanonicalMc.cpp  CanonicalMc1.cpp  CanonicalMcStepT.cpp  Cluster.cpp  ClustersFinder.cpp  Iterator.cpp  ShortRangeOrder.cpp  SimulatedAnnealing.cpp
lkmc/api/include/: Home.h  Parameter.h  Utility.h
lkmc/api/src/: Home.cpp  Parameter.cpp
lkmc/cfg/include/: Atom.hpp  Config.h  Constants.hpp  Element.hpp  ElementCluster.hpp  Lattice.hpp  LatticeCluster.hpp  VectorMatrix.hpp
lkmc/cfg/src/: Config.cpp
lkmc/kmc/include/: ChainKmcMpi.h  ChainKmcOmp.h  ChainKmcOmpi.h  ChainKmcSimulation.h  FirstKmcMpi.h  JumpEvent.h  KmcEvent.h
lkmc/kmc/src/: ChainKmcMpi.cpp  ChainKmcOmp.cpp  ChainKmcOmpi.cpp  ChainKmcSimulation.cpp  FirstKmcMpi.cpp  JumpEvent.cpp  KmcEvent.cpp
lkmc/mc/include/: CanonicalMc.h  CanonicalMcSerial.h  CanonicalMcStepT.h  ChainKmcMpi.h  ChainKmcOmp.h  ChainKmcOmpi.h  FirstKmcMpi.h  JumpEvent.h  KineticMcAbstract.h  KineticMcChainMpi.h  KineticMcChainOmp.h  KineticMcChainOmpi.h  KineticMcFirstMpi.h  KineticMcFirstOmp.h  McAbstract.h  SemiGrandCanonicalMcStepT.h  ThermodynamicAveraging.h
lkmc/mc/src/: CanonicalMc.cpp  CanonicalMcStepT.cpp  ChainKmcMpi.cpp  ChainKmcOmp.cpp  ChainKmcOmpi.cpp  FirstKmcMpi.cpp  JumpEvent.cpp  KineticMcAbstract.cpp  KineticMcChainMpi.cpp  KineticMcChainOmp.cpp  KineticMcChainOmpi.cpp  KineticMcFirstMpi.cpp  KineticMcFirstOmp.cpp  McAbstract.cpp  SemiGrandCanonicalMcStepT.cpp  ThermodynamicAveraging.cpp
lkmc/pred/include/: BondCountingPredictor.h  ClusterExpansionPredictor.h  ClusterExpansionPredictorE0DE.h  ClusterExpansionPredictorQuartic.h  ElementBond.hpp  ElementCluster.hpp  EnergyChangePredictorFaster.h  EnergyChangePredictorPair.h  EnergyChangePredictorPairAll.h  EnergyChangePredictorSite.h  EnergyChangePredictorSmaller.h  EnergyEstimator.h  EnergyPredictor.h  EnergyPredictorE0DE.h  EnergyPredictorE0DEBond.h  EnergyPredictorE0DECluster.h  EnergyPredictorE0DEState.h  EnergyPredictorE0DESymmetry.h  EnergyPredictorHighT.h  EnergyPredictorLru.h  EnergyPredictorQuartic.h  EnergyPredictorQuarticLru.cpp  EnergyPredictorQuarticLru.h  EnergyPredictorRandomizer.h  EnergyPredictorState.h  EnergyPredictorStateLru.h  EnergyPredictorSymmetry.h  EnergyPredictorUtility.h  EnergyPredictorUtility.hpp  EnergyUtility.h  LatticeCluster.hpp  StateChangePredictor.h  TotalEnergyEstimator.h  TotalEnergyPredictor.h  VacancyMigrationPredictorQuartic.h  VacancyMigrationPredictorQuarticLru.h  VacancyMigrationRandomizer.h
lkmc/pred/src/: BondCountingPredictor.cpp  ClusterExpansionPredictor.cpp  ClusterExpansionPredictorE0DE.cpp  ClusterExpansionPredictorMM2.cpp  ClusterExpansionPredictorMMM.cpp  ClusterExpansionPredictorPeriodic.cpp  ClusterExpansionPredictorQuartic.cpp  ClusterExpansionPredictorState.cpp  EnergyChangePredictorFaster.cpp  EnergyChangePredictorPair.cpp  EnergyChangePredictorPairAll.cpp  EnergyChangePredictorSite.cpp  EnergyChangePredictorSmaller.cpp  EnergyPredictor.cpp  EnergyPredictorE0DE.cpp  EnergyPredictorE0DEBond.cpp  EnergyPredictorE0DECluster.cpp  EnergyPredictorE0DEState.cpp  EnergyPredictorE0DESymmetry.cpp  EnergyPredictorHighT.cpp  EnergyPredictorLru.cpp  EnergyPredictorQuartic.cpp  EnergyPredictorQuarticLru.cpp  EnergyPredictorRandomizer.cpp  EnergyPredictorState.cpp  EnergyPredictorStateLru.cpp  EnergyPredictorSymmetry.cpp  EnergyPredictorUtility.cpp  EnergyUtility.cpp  EneryEstimator.cpp  StateChangePredictor.cpp  TotalEnergyPredictor.cpp  VacancyMigrationPredictorQuartic.cpp  VacancyMigrationPredictorQuarticLru.cpp  VacancyMigrationRandomizer.cpp
lmc/: main.cpp
lmc/ansys/: ShortRangeOrder.cpp  ShortRangeOrder.h
lmc/ansys/include/: Cluster.h  ExitTime.h  Iterator.h  ShortRangeOrder.h  SimulatedAnnealing.h  SoluteCluster.h  Traverse.h
lmc/ansys/src/: Cluster.cpp  ExitTime.cpp  Iterator.cpp  ShortRangeOrder.cpp  SimulatedAnnealing.cpp  SoluteCluster.cpp  Traverse.cpp
lmc/api/include/: Home.h  Parameter.h  Utility.h
lmc/api/src/: Home.cpp  Parameter.cpp
lmc/ce/include/: AtomCluster.hpp  AtomClusterType.hpp  ClusterExpansion.h  ClusterType.hpp  LatticeCluster.hpp  LatticeClusterType.hpp  PotentialEnergyEstimator.h  Symmetry.h
lmc/ce/src/: ClusterExpansion.cpp  PotentialEnergyEstimator.cpp  Symmetry.cpp
lmc/cfg/include/: Atom.hpp  Cluster.hpp  Config.h  Constants.hpp  Element.hpp  ElementCluster.hpp  Lattice.hpp  LatticeCluster.hpp  VectorMatrix.hpp
lmc/cfg/src/: Config.cpp
lmc/constant/include/: Constants.hpp  Element.hpp
lmc/mc/include/: CanonicalMcAbstract.h  CanonicalMcOmp.h  CanonicalMcSerial.h  JumpEvent.h  KineticMcAbstract.h  KineticMcChainOmpi.h  KineticMcFirstMpi.h  KineticMcFirstOmp.h  McAbstract.h  SimulatedAnnealing.h  ThermodynamicAveraging.h
lmc/mc/src/: CanonicalMcAbstract.cpp  CanonicalMcOmp.cpp  CanonicalMcSerial.cpp  JumpEvent.cpp  KineticMcAbstract.cpp  (+6 more)
lmc/pred/: ShortRangeOrder.cpp  ShortRangeOrder.h  SoluteCluster.cpp  SoluteCluster.h
script/: CanonicalMC.txt  CanonicalMcStepT.txt  ChainKmc.txt  Cluster.txt  FindCluster.txt  KineticMcChainOmpi.txt  Reformat.txt  SimulatedAnnealing.txt  ansys_param.txt  cluster_param.txt  cmc_param.txt  kmc_param.txt  restart.py  restart_binary.py  sa_param.txt
(+24 files in other folders)
